array.island.Island.scala.error
Erreur de compilation :
Island:5: error: value lenght is not a member of Array[Int]
  for (b <- 0 to num.lenght - 2){
                     ^