array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var a:Int = 0
  
  for (b <- 0 to num.lenght - 2){
    if(num(b)<num(b+1)){
      a=a+1;
    }
  }
  return a;
}